src/wptf-style.css
/* ... */
.paging a.tm-trans-button {
    background: blue;
    color: white !important;
    padding-left: 5px;
    padding-right: 5px;
}



.paging a.tm-trans-button.foreighn {
    background: grey;
    color: white !important;
    padding-left: 5px;
    padding-right: 5px;
}

.paging a.tm-trans-button:hover {
    color: lightgray !important;
}

.paging a.tm-trans-button.translated {
    background: green;
}

.paging a.tm-trans-button::before {
    content: '\f326';
    -webkit-font-smoothing: antialiased;
    display: inline-block;
    font: normal 20px/1 'dashicons';
    vertical-align: middle;
    width: 28px;
}

.paging a.tm-trans-button.started {
        content: "";
        display: inline-block;
        margin: auto;
        border: 4px solid transparent;
        border-top-color: #ffffff;
        border-radius: 50%;
        animation: button-loading-spinner 1s ease infinite;
 }


 .paging a.tm-trans-button.restarted {
        content: "";
        display: inline-block;
        margin: auto;
        border: 4px solid transparent;
        border-top-color: #ffffff;
        border-radius: 50%;
        background-color: blue;
        animation: button-loading-spinner 1s ease infinite;
 }

 .paging a.tm-trans-button.after_error {
        animation: none;
        background: red;
 }

 .paging a.tm-trans-button.translated {
        animation: none !important;
        background: green;
        border-radius: 0%;
        border: 0px solid transparent;
        display: inline-block;
        padding-top: 0.1em !important;
        padding-bottom: 0.1em !important;
        margin: 5px !important;
 }


.panel-header-actions .translation-filler-button {
    width: auto;
    padding: 5px;
    background-color: blue;
    color: white;
}

.panel-header-actions .translation-filler-button {
    width: auto;
    padding: 5px;
    background-color: blue;
    color: white;
}
.panel-header-actions .translation-filler-button:focus {
    color: white;
}

.panel-header-actions .translation-filler-button:hover {
    background-color: blue;
    color: lightgray;
}

.panel-header-actions .translation-filler-button::before {
    content: '\f326';
    -webkit-font-smoothing: antialiased;
    display: inline-block;
    font: normal 20px/1 'dashicons';
    vertical-align: middle;
    width: 28px;
}

.panel-header-actions .translation-filler-button.translated {
    background-color: green;
}



    /* below function can to be removed if GlotPress has improved the behavior of the edit screen*/
    .panel-header__bubble {
    padding: 1px 1px !important;
    }

    .paging a.translation-entry-my-button::before {
    content: '\f326';
    -webkit-font-smoothing: antialiased;
    display: inline-block;
    font: normal 20px/1 'dashicons';
    vertical-align: middle;
    width: 28px;
}

.panel-header-actions .translation-entry-my-button {
    width: auto;
    padding: 2px;
    background-color: blue;
    color: white;
    vertical-align: middle;
}

.panel-header-actions .translation-entry-my-button:focus {
    color: white;
}

.panel-header-actions .translation-entry-my-button:hover {
    background-color: blue;
    color: lightgray;
}

.panel-header-actions .translation-entry-my-button.started {
        content: "";
        display: inline-block;
        margin: auto;
        border: 4px solid transparent;
        border-top-color: #ffffff;
        border-radius: 50%;
        animation: button-loading-spinner 1s ease infinite;
}

.panel-header-actions .translation-entry-my-button::before {
    content: '\f326';
    -webkit-font-smoothing: antialiased;
    display: inline-block;
    font: normal 20px/1 'dashicons';
    vertical-align: middle;
    width: 28px;
}

    .panel-header-actions .translation-entry-my-button.translated {
        animation: none !important;
        background: green;
        border-radius: 0%;
        border: 0px solid transparent;
        display: inline-block;
        padding-top: 0.1em !important;
        padding-bottom: 0.1em !important;
        margin: 5px !important;
    }

    .panel-header-actions .translation-entry-my-button.translated_error {
        animation: none;
        background-color: red;
    }


.paging a.check_translation-button {
    background: blue;
    color: white !important;
    padding-left: 5px;
    padding-right: 5px;
}

.paging a.check_translation-button:hover {
        color: lightgray !important;
}

.paging a.check_translation-button {
    color: lightgray;
}

.paging a.check_translation-button.ready {
    background: green;
}

.paging a.check_translation-button::before {
    content: '\f326';
    -webkit-font-smoothing: antialiased;
    display: inline-block;
    font: normal 20px/1 'dashicons';
    vertical-align: middle;
    width: 28px;
}

.panel-header-actions .check_translation-button {
    width: auto;
    padding: 11px;
    background-color: blue;
    color: white;
}

.panel-header-actions .check_translation-button:focus {
    color: white;
}

.panel-header-actions .check_translation-button:hover {
    background-color: blue;
    color: lightgray;
}

.panel-header-actions .check_translation-button::before {
    content: '\f326';
    -webkit-font-smoothing: antialiased;
    display: inline-block;
    font: normal 20px/1 'dashicons';
    vertical-align: middle;
    width: 28px;
}

.panel-header-actions .check_translation-button.started {
    content: "";
    display: inline-block;
    margin: auto;
    border: 4px solid transparent;
    border-top-color: #ffffff;
    border-radius: 50%;
    animation: button-loading-spinner 1s ease infinite;
}
.panel-header-actions .check_translation-button.ready {
    background-color: green;
}



.paging a.addtranslation-entry-my-button {
    background: blue;
    color: white;
    padding-left: 3px;
    padding-right: 5px;
    padding-top: 3px;
    padding-bottom: 10px;
}

.paging a.addtranslation-entry-my-button {
    color: lightgray;
}

.paging a.addtranslation-entry-my-button.ready {
    background: green;
}
/* ... */

